# models/session.go
@@ -2,19 +2,23 @@ package models
 
 import (
 	"ApiTestApp/AppUtil"
-	SessionService "ApiTestApp/service"
+	"ApiTestApp/Service"
+	"crypto/rand"
+	"encoding/base64"
 	"encoding/json"
+	"io"
 )
 
 //構造体変数名パスカルケースしないとjsonにできない謎仕様なので要注意
 type Session struct {
-	SessionId string `json:"session_id"`
-	//temporary_common_Key string
+	SessionId          string `json:"session_id"`
+	TemporaryCommonKey string `json:"temporary_common_key"`
+	UserId             uint64 `json:"user_id"`
 }
 
 type ResponseTmp struct {
-	ResultCode int   `json:"result_code"`
-	TtimeStamp int64 `json:"time_stamp"`
+	ResultCode uint16 `json:"result_code"`
+	TimeStamp  string `json:"time_stamp"`
 }
 
 type MakeSessionResponse struct {
@@ -22,15 +26,27 @@ type MakeSessionResponse struct {
 	ResponseTmp
 }
 
-func CreateNewSessionResponse() []byte {
-	var sessionResponse = MakeSessionResponse{}
-	sessionResponse.ResultCode = AppUtil.RESULT_CODE_SUCCESS
-	sessionResponse.TtimeStamp = 0
-	sessionResponse.SessionId = SessionService.MakeSessionId()
-	if sessionResponse.SessionId == "" {
-		// エラー時の処理
-		sessionResponse.ResultCode = AppUtil.RESULT_CODE_ERROR
+func (this *MakeSessionResponse) SetApiResponse() []byte {
+	this.ResultCode = AppUtil.RESULT_CODE_SUCCESS
+	this.TimeStamp = Service.GetTimeRFC3339()
+	this.TemporaryCommonKey = ""
+	this.SessionId = MakeSessionId()
+	if this.SessionId == "" {
+		// エラーコードを入れる
+		this.ResultCode = AppUtil.RESULT_CODE_ERROR
 	}
-	outputJson, _ := json.Marshal(&sessionResponse)
+	outputJson, err := json.Marshal(this)
+	if err != nil {
+		// エラーコードを入れる
+		panic(err)
+	}
 	return outputJson
+}
+
+func MakeSessionId() string {
+	b := make([]byte, 32)
+	if _, err := io.ReadFull(rand.Reader, b); err != nil {
+		return ""
+	}
+	return base64.URLEncoding.EncodeToString(b)
 }
